# MinecraftConsoles

./: .clang-format  .gitignore  CMakeLists.txt  COMPILE.md  MinecraftConsoles.sln  README.md
.github/: pull_request_template.md
.github/workflows/: nightly.yml
Minecraft.Client/: AbstractProjectileDispenseBehavior.cpp  AbstractProjectileDispenseBehavior.h  AbstractTexturePack.cpp  ArrowRenderer.cpp  ArrowRenderer.h  BatModel.cpp  BatModel.h  BatRenderer.cpp  BatRenderer.h  BeaconRenderer.cpp  BeaconRenderer.h  BlazeModel.cpp  BlazeModel.h  BlazeRenderer.cpp  BlazeRenderer.h  BoatRenderer.cpp  BoatRenderer.h  BookModel.cpp  BookModel.h  BossMobGuiInfo.cpp  BossMobGuiInfo.h  BufferedImage.cpp  Camera.cpp  Camera.h  CaveSpiderRenderer.cpp  CaveSpiderRenderer.h  ChestRenderer.cpp  ChestRenderer.h  ChickenModel.cpp  ChickenModel.h  ChickenRenderer.cpp  ChickenRenderer.h  Chunk.cpp  ClientConnection.cpp  ClientConnection.h  ClockTexture.cpp  CompassTexture.cpp  CowRenderer.cpp  CowRenderer.h  CreeperModel.cpp  (+268 more)
Minecraft.Client/Common/: App_Defines.h  App_enums.h  App_structs.h  BuildVer.h  ConsoleGameMode.cpp  ConsoleGameMode.h  Console_Debug_enum.h  Consoles_App.cpp  Consoles_App.h  Potion_Macros.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.cpp  Consoles_SoundEngine.h  SoundEngine.cpp  SoundNames.cpp
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCManager.cpp  DLCManager.h  DLCPack.cpp  DLCPack.h  DLCTextureFile.cpp
Minecraft.Client/Common/GameRules/: ConsoleGenerateStructure.h  ConsoleSchematicFile.cpp  GameRuleManager.cpp  LevelGenerationOptions.cpp  LevelGenerationOptions.h  StartFeature.cpp  StartFeature.h  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
Minecraft.Client/Common/Leaderboards/: LeaderboardInterface.cpp  LeaderboardInterface.h  SonyLeaderboardManager.cpp  SonyLeaderboardManager.h  base64.cpp  base64.h
Minecraft.Client/Common/Media/: BeaconMenu1080.swf  BeaconMenu480.swf  BeaconMenu720.swf  BeaconMenuSplit1080.swf  BeaconMenuSplit720.swf  BeaconMenuVita.swf  Controls1080.swf  Crafting2x2Menu1080.swf  Crafting2x2MenuVita.swf  Crafting3x3MenuSplit1080.swf  CreateWorldMenu1080.swf  CreateWorldMenu480.swf  CreateWorldMenu720.swf  CreateWorldMenuVita.swf  CreativeMenuVita.swf  FireworksMenu1080.swf  FireworksMenu480.swf  FireworksMenu720.swf  FireworksMenuSplit1080.swf  FireworksMenuSplit720.swf  FireworksMenuVita.swf  HTMLColours.col  HTMLColours.xml  HUD1080.swf  HUD480.swf  HUD720.swf  HUDSplit1080.swf  HUDSplit720.swf  HUDVita.swf  HopperMenu1080.swf  HopperMenu480.swf  HopperMenu720.swf  HopperMenuSplit1080.swf  HopperMenuSplit720.swf  HopperMenuVita.swf  HorseInventoryMenu1080.swf  HorseInventoryMenu480.swf  HorseInventoryMenu720.swf  HorseInventoryMenuSplit1080.swf  HorseInventoryMenuSplit720.swf  (+160 more)
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  NetworkPlayerInterface.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  (+2 more)
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_App.h  PSVita_Minecraft.cpp
Minecraft.Client/PSVitaMedia/: strings.h
Minecraft.Client/Windows64/: KeyboardMouseInput.cpp  Windows64_App.cpp  Windows64_App.h  Windows64_Minecraft.cpp
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Client/Xbox/: Xbox_App.cpp
Minecraft.Client/sce_sys/: keystone_vita
Minecraft.World/: AABB.cpp  AABB.h  Abilities.cpp  AbsoptionMobEffect.cpp  AbsoptionMobEffect.h  AbstractContainerMenu.cpp  AbstractContainerMenu.h  AbstractProjectileDispenseBehavior.cpp  AbstractProjectileDispenseBehavior.h  AddEntityPacket.h  AddGlobalEntityPacket.cpp  AddMobPacket.cpp  AddMobPacket.h  AddPlayerPacket.cpp  AgableMob.cpp  AgableMob.h  AmbientCreature.cpp  AmbientCreature.h  Animal.cpp  Animal.h  AnimalChest.cpp  AnimalChest.h  AnvilMenu.cpp  AnvilMenu.h  AnvilTile.cpp  AnvilTile.h  ArmorDyeRecipe.cpp  ArmorItem.cpp  ArmorItem.h  ArmorRecipes.cpp  ArmorSlot.cpp  ArmorSlot.h  ArrayWithLength.h  Arrow.cpp  Arrow.h  AttackDamageMobEffect.cpp  AttackDamageMobEffect.h  Attribute.cpp  Attribute.h  AttributeInstance.h  (+1024 more)
Minecraft.World/ARM64EC_Debug/: Minecraft.World.vcxproj.FileListAbsolute.txt
Minecraft.World/x64headers/: extraX64.h
cmake/: ClientSources.cmake  CopyAssets.cmake  WorldSources.cmake
(+349 files in other folders)
